# XialloControl

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  README.md  commitlint.config.js  delete_tags.ps1  double_click_design.md  package.json  pnpm-lock.yaml  preset_construct_design.md  privacy-policy.md  project_analysis_for_ai.md  supported_devices.json  tauri.conf.json  update_tag.ps1  virtual_keyboard_implementation_plan.md  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  default.md  feature_request.yml  feedback.yml
.github/PULL_REQUEST_TEMPLATE/: bug.md  bug.yml
.github/workflows/: app.yml  changelog-config.json  changelog_config.json  pr_check.yml  rust.yml
.husky/: commit-msg  validate-commit-msg.js
.playwright-mcp/: page-2026-07-05T00-38-12-260Z.yml
.run/: tauri build.run.xml
capabilities/: default.json
docs/adr/: ADR-001-gilrs-uuid-fork-patch.md  ADR-002-key-learning-toml-persistence.md  README.md
src/: App.ts  App.vue  adaptive_sampler.rs  controller.rs  lib.rs  main.rs  main.ts  mapping.rs  preset.rs  setting.rs  setup.rs  tray.rs  xeno_utils.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json5
src-tauri/capabilities/: default.json
src-tauri/src/: adaptive_sampler.rs  app_state.rs  controller.rs  lib.rs  main.rs  mapping.rs  preset.rs  setting.rs  setup.rs  tray.rs  xeno_utils.rs
src-tauri/src/controller/: calibrate.rs  controller.rs  datas.rs  logic.rs  mod.rs  ps4.rs  xbox.rs
src-tauri/src/preset/: preset_data.rs  ps4_example.rs  xbox_example.rs
src-tauri/webassets/: child.html  index.html  main.js
src/assets/: styles.css
src/controller/: calibrate.rs  controller.rs  controller_xbox.rs  datas.rs  logic.rs  mod.rs  xbox.rs
src/controller_supports/: mod.rs  xbox.rs
src/locales/: en_US.json  zh_CN.json
src/ts/: ControllerGraph.ts  JoystickCaliModal.ts  LeftPanel.ts  MappingModal.ts  PresetEditModal.ts  RightPanel.ts  UpdateModal.ts  WindowHeader.ts  global_states.ts  i18n.ts
src/vue/: DraggableList.vue  JoystickCaliModal.vue  LeftPanel.vue  MappingModal.vue  PresetEditModal.vue  RightPanel.vue  SplitPane.vue  UpdateModal.vue  WindowFooter.vue  WindowHeader.vue
webassets/: index.html  main.js  styles.css
