[package]
name = "xenocontrol"
version = "0.1.5"
description = "XenoControl by Hotakus"
authors = ["Hotakus"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xenocontrol_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tray-icon = "0.21.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gilrs = "0.10"
enigo = "0.2"
tokio = { version = "1", features = ["rt", "macros"] }
shared_memory = "0.12" # 进程间通信
hidapi = "2"
log = "0.4"
env_logger = "0.11"
simple_logger = "4"
winit = "0.28"
tauri-plugin-shell = "2"