[package]
name = "xenocontrol"
version = "0.2.19"
description = "XenoControl by Hotakus"
authors = ["Hotakus"]
edition = "2024"
license = "MIT"  # 添加许可证
repository = ""  # 添加仓库URL
homepage = ""    # 添加项目主页

[lib]
name = "xenocontrol_lib"
crate-type = ["rlib"]  # 仅保留rlib

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
strip = "none"

[profile.release]
opt-level = "s"     # 大小优化
debug = false
strip = true        # 减小二进制大小
debug-assertions = false
overflow-checks = false
lto = "thin"        # 平衡编译时间和性能
panic = 'unwind'
incremental = false
codegen-units = 1   # 最大化优化
rpath = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2", features = ["tray-icon"] }

# Tauri 插件
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"

# 系统交互
enigo = "0.5"     # 输入模拟
gilrs = "0.11"    # 游戏手柄支持
hidapi = "2"      # HID设备访问
dirs = "6.0.0"    # 目录路径获取
rusty-xinput = "1"

# 数据处理
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8.12"   # 更新版本

# 异步
tokio = { version = "1", features = ["rt", "macros"] }

# 错误处理
anyhow = "1.0.86" # 更新版本

# 日志系统 (使用simple_logger)
log = "0.4"
simple_logger = "4"  # 仅使用simple_logger

# 实用工具
once_cell = "1"
