[package]
name = "XialloControl"
version = "0.21.3"
description = "XialloControl by Hotakus"
authors = ["Hotakus"]
edition = "2024"
license = "GPL-3.0"  # 添加许可证
repository = "https://github.com/Hotakus/XialloControl"  # 添加仓库URL
homepage = "https://github.com/Hotakus/XialloControl"    # 添加项目主页

[lib]
name = "xiallocontrol_lib"
crate-type = ["rlib"]  # 仅保留rlib

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
strip = "none"

[profile.release]
opt-level = "s"     # 大小优化
debug = false
strip = "debuginfo"        # 减小二进制大小
debug-assertions = false
overflow-checks = false
lto = "thin"        # 平衡编译时间和性能
panic = 'abort'
incremental = false
codegen-units = 1   # 最大化优化
rpath = false

[build-dependencies]
tauri-build = { version = "2.4.1", features = [ "config-json5" ] }

[dependencies]
# Tauri 核心
tauri = { version = "2.8.5", features = ["tray-icon", "config-json5"] }

# Tauri 插件
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"

# 系统交互
enigo = { version = "0.6.1", default-features = false, features = ["serde", "x11rb", "wayland", "libei_smol"] }# 输入模拟
gilrs = { path = "./third-party/gilrs/gilrs", version = "0.11.0" }
hidapi = "2"      # HID设备访问
rusty-xinput = "1"

# 数据处理
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.5"   # 更新版本

# 异步
tokio = { version = "1", features = ["full"] }

# 错误处理
anyhow = "1.0.86" # 更新版本

# 日志系统 (使用simple_logger)
log = "0.4"
url = "2"

# 实用工具
once_cell = "1"
num-traits = "0.2.19"
cfg-if = "1.0.1"
tauri-plugin-os = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
uuid = { version = "1.17.0", features = ["v4"] }
ds4-rs = "0.1.1"
dualsense-rs = "0.6.0"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
